# OfferBot

./: .gitignore  CONTRIBUTING.md  LICENSE  PARALLEL-WORK.md  README.md
boss-agent/: Makefile  __init__.py  config.py  public  pyproject.toml  requirements.txt
boss-agent/.chainlit/: config.toml
boss-agent/agent/: __init__.py  bootstrap.py  context_builder.py  conversation_manager.py  executor.py  llm_client.py  memory.py  memory_extractor.py  planner.py  report.py  skill_loader.py  state.py  system_prompt.py  tool_registry.py
boss-agent/browser/: liepin.py
boss-agent/data/: rag_e2e_report.json
boss-agent/db/: __init__.py  chainlit_schema.sql  database.py  schema.sql
boss-agent/rag/: __init__.py  embedding.py  job_index.py  job_rag.py
boss-agent/scripts/: __init__.py  conftest.py  consolidate_memory.py  generate_tool_docs.py  liepin_login.py  run.py  test_action_card.py  test_agent_chat.py  test_agent_flow.py  test_bootstrap_e2e.py  test_browser.py  test_e2e_framework.py  test_e2e_llm.py  test_e2e_scrape.py  test_e2e_toolset_routing.py  test_getjob_dataflow_live.py  test_getjob_live.py  test_getjob_methods.py  test_job_rag.py  test_lightrag.py  test_memory_extractor_cli.py  test_method_status.py  test_rag_e2e.py  test_rag_precision.py  test_rag_scenarios.py  test_scenarios.json  tool_graph.py  translate_tasks.py
boss-agent/services/: exposure_data.py  getjob_client.py  task_monitor.py  task_state.py
boss-agent/skills/: 面试准备.md
boss-agent/tests/: test_app.py  test_application_store.py  test_blacklist.py  test_bootstrap.py  test_chat_api.py  test_config.py  (+43 more)
(+112 files in other folders)
